# carbon_capture

./: main.ipynb  pyproject.toml
carbon_capture/: emissions.py
data/input/: bounds.gpkg
data/input/sisepuede/: Forest Sequestration Emission Factor.csv  Land Use Biomass Sequestration Factor.csv  Young Secondary Forest Sequestration Emission Factor.csv
